555-pool/patroni-postgres-16.yml
# REF: https://github.com/patroni/patroni/blob/3e3a4e134699154eb6fa8fc63f5d54d8256f1536/kubernetes/patroni_k8s.yaml

# headless service to avoid deletion of patroni-postgres-16-config endpoint
apiVersion: v1
kind: Service
metadata:
  name: patroni-postgres-16-config
  labels:
    application: patroni
    cluster-name: patroni-postgres-16
spec:
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &cluster_name patroni-postgres-16
  labels:
    application: patroni
    cluster-name: *cluster_name
spec:
  replicas: 3
  serviceName: *cluster_name
  selector:
    matchLabels:
      application: patroni
      cluster-name: *cluster_name
  template:
    metadata:
      labels:
        application: patroni
        cluster-name: *cluster_name
    spec:
      serviceAccountName: patroni-postgres-16
      securityContext:
        fsGroup: 999 # postres
      containers:
        - name: *cluster_name
          image: tuana9a/patroni-postgres-16:2025.12.19.083041
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /readiness
              port: 8008
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 8008
              protocol: TCP
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /home/postgres/pgdata
              name: pgdata
      terminationGracePeriodSeconds: 0
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        labels:
          application: spilo
          spilo-cluster: *cluster_name
        name: pgdata
      spec:
        storageClassName: proxmox-data-xfs
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi

---
apiVersion: v1
kind: Endpoints
metadata:
  name: &cluster_name patroni-postgres-16
  labels:
    application: patroni
    cluster-name: *cluster_name
subsets: []

---
apiVersion: v1
kind: Service
metadata:
  name: &cluster_name patroni-postgres-16
  labels:
    application: patroni
    cluster-name: *cluster_name
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: patroni-postgres-16-repl
  labels:
    application: patroni
    cluster-name: &cluster_name patroni-postgres-16
    role: replica
spec:
  type: ClusterIP
  selector:
    application: patroni
    cluster-name: *cluster_name
    role: replica
  ports:
    - port: 5432
      targetPort: 5432
