555-pool/pg-purple.yml
---
# headless service to avoid deletion of pg-purple-config endpoint
apiVersion: v1
kind: Service
metadata:
  name: pg-purple-config
  labels:
    application: patroni
    cluster-name: pg-purple
spec:
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &cluster_name pg-purple
  labels:
    application: patroni
    cluster-name: *cluster_name
spec:
  replicas: 3
  serviceName: *cluster_name
  selector:
    matchLabels:
      application: patroni
      cluster-name: *cluster_name
  template:
    metadata:
      labels:
        application: patroni
        cluster-name: *cluster_name
    spec:
      serviceAccountName: pg-purple
      securityContext:
        fsGroup: 999 # postres
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: *cluster_name
          image: tuana9a/patroni-postgres-16:git-490a2d680b9cea9aa205bea8f1d71cd6799e783f # support patroni.yml overwrite
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /readiness
              port: 8008
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 8008
              protocol: TCP
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /home/postgres/pgdata
              name: pgdata
            - name: pg-purple-config-overwrite
              mountPath: "/home/postgres/patroni.yml.tmpl"
              subPath: "patroni.yml.tmpl"
      volumes:
        - name: pg-purple-config-overwrite
          configMap:
            name: pg-purple-config-overwrite
      terminationGracePeriodSeconds: 0
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        labels:
          application: spilo
          spilo-cluster: *cluster_name
        name: pgdata
      spec:
        storageClassName: proxmox-data-xfs
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi

---
apiVersion: v1
kind: Endpoints
metadata:
  name: &cluster_name pg-purple
  labels:
    application: patroni
    cluster-name: *cluster_name
subsets: []

---
apiVersion: v1
kind: Service
metadata:
  name: &cluster_name pg-purple
  labels:
    application: patroni
    cluster-name: *cluster_name
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: pg-purple-repl
  labels:
    application: patroni
    cluster-name: &cluster_name pg-purple
    role: replica
spec:
  type: ClusterIP
  selector:
    application: patroni
    cluster-name: *cluster_name
    role: replica
  ports:
    - port: 5432
      targetPort: 5432
